style(css): lint with stylelint

--- a/styles/light.css
+++ b/styles/light.css
@@ -2,7 +2,7 @@
  * under GNU General Public License
  * Variante du style margot avec barre de menu blanche
  */
-@import 'margot.css';
+@import url('margot.css');
 
 /*
  * CSS variables
@@ -10,9 +10,7 @@
 :root {
   /* couleur de la barre de menu */
  --navbar-bg-color: white; 
-
  --navbar-text-color: var(--neutral-color); 
-
  --navbar-link-color: var(--neutral-color); 
 
 /* --navbar-link-bg-color: transparent; */
@@ -25,24 +23,26 @@
   background: transparent !important;
   color: var(--navbar-link-color) !important;
 }
+
 #yw-topnav .btn.btn-default:hover,
 #yw-topnav .btn.btn-default:focus,
 #yw-topnav .btn.btn-default:active
 {
   color: var(--primary-color) !important;
 }
+
 #yw-topnav .dropdown-menu {
   border: 1px solid var(--neutral-light-color);
   border-top:none;
 }
 
-@media (max-width: 1200px) {
+@media (width <= 1200px) {
   :root {
     --main-text-fontsize: 15px;
   }
 }
 
-@media (max-width: 800px) {
+@media (width <= 800px) {
   :root {
     --main-text-fontsize: 13px;
   }
