--- a/styles/margot-base/components/modals.css
+++ b/styles/margot-base/components/modals.css
@@ -16,15 +16,18 @@ body.modal-open {
   display: flex;
   align-items: center;
 }
+
 .modal-body {
-  padding: 0 2rem 1.5rem 2rem;
+  padding: 0 2rem 1.5rem;
 }
+
 .modal-footer {
   text-align: center;
   border: none;
-  padding: 0 2rem 1.5rem 2rem;
+  padding: 0 2rem 1.5rem;
   margin-top: -1.3rem;
 }
+
 .modal-header .close {
   margin-top: 0;
   order: 10;
@@ -40,22 +43,27 @@ body.modal-open {
   padding: 10px !important; /* so it's easier to click on mobile */
   margin-right: -10px;
 }
+
 .modal-backdrop {
   background-color: var(--neutral-color);
   transition: opacity .5s;
 }
-@media (min-width: 768px) {
+
+@media (width >= 768px) {
   .modal-dialog { width: 800px; }
 }
-@media (min-width: 768px) {
+
+@media (width >= 768px) {
   .modal-dialog.modal-lg { width: calc(100% - 50px); }
 }
-@media (min-width: 992px) {
+
+@media (width >= 992px) {
   .modal-dialog.modal-lg {
     width: calc(100% - 100px);
     max-width: 1400px;
   }
 }
+
 .modal .separator {
   background-color: var(--primary-color);
   height: 8px;
