--- a/presets/red.css
+++ b/presets/red.css
@@ -4,7 +4,7 @@
   --secondary-color-2: #d78958;
   --neutral-color: #444041;
   --neutral-soft-color: #a7a6a6;
-  --neutral-light-color: #ffffff;
+  --neutral-light-color: #fff;
   --main-text-fontsize: 17px;
   --main-text-fontfamily: "Nunito", sans-serif;
   --main-title-fontfamily:'Nunito', sans-serif;
