--- a/styles/margot-base/components/forms.css
+++ b/styles/margot-base/components/forms.css
@@ -1,26 +1,31 @@
-.control-label:after {
+.control-label::after {
   content: "";
   margin-right: 0;
 }
-.symbole_obligatoire:after {
+
+.symbole_obligatoire::after {
   margin-left: 0.25em;
 }
+
 .form-horizontal {
   margin: 10px 0;
 }
+
 .form-control,
 #form-builder-container {
   height: 46px;
-  padding: 0.5em 1em 0.4em 1em;
+  padding: 0.5em 1em 0.4em;
   font-size: var(--main-text-fontsize);
   color: var(--main-text-color);
   border: 2px solid var(--primary-color);
   border-radius: 3px !important;
   background-color: #f9f9f9;
 }
+
 .form-control {
   padding: 3px 1em 0 0.8em;
 }
+
 .form-control[disabled] {
   background-color: var(--neutral-light-color);
 }
@@ -29,32 +34,41 @@
 .ace-body {
   background-color: #f9f9f9;
 }
+
 .note-editor.note-frame .note-editing-area .note-editable {
   color: var(--main-text-color) !important;
   padding: 1rem !important;
 }
+
 .note-editor .panel-heading.note-toolbar {
   background-color: #f9f9f9;
 }
+
 .note-editor .panel-heading.note-toolbar .btn i {
   margin: 0;
 }
+
 .control-group .controls {
   margin-left: 0 !important;
 }
+
 textarea.form-control {
   padding: 15px;
 }
+
 .form-group {
   position: relative;
   margin-top: 25px;
 }
+
 .form-group:first-child {
   margin-top: 30px;
 }
+
 .form-group .controls.col-sm-9 {
   width: 100%;
 }
+
 .form-group .control-label {
   text-align: left;
   color: var(--primary-color);
@@ -66,13 +80,16 @@ textarea.form-control {
   margin: 0;
   line-height: 1em;
 }
+
 .form-group:not(.file) .control-label {
   height: auto;
 }
+
 .form-group.textarea.summernote {
   padding: 0;
 }
-.form-group:not(.file):not(.checkbox) .control-label,
+
+.form-group:not(.file, .checkbox) .control-label,
 .form-group.wrapper.checkbox .control-label {
   position: absolute;
   z-index: 5;
@@ -81,23 +98,28 @@ textarea.form-control {
   padding: 0 4px 0 8px;
   bottom: calc(100% - 10px);
 }
-form#form-modal-upload .form-group:not(.file):not(.checkbox) .control-label,
+
+form#form-modal-upload .form-group:not(.file, .checkbox) .control-label,
 form#form-modal-upload .form-group.wrapper.checkbox .control-label {
   background-color: white;
 }
+
 .form-group.wrapper.checkbox .control-label,
 .form-group.wrapper.radio .control-label {
   bottom: calc(100% - 8px);
 }
-.form-group:not(.file):not(.checkbox) .control-label {
+
+.form-group:not(.file, .checkbox) .control-label {
   margin-left: 8px;
   margin-right: 33px;
 }
+
 .form-group.wrapper.checkbox .control-label {
   margin-left: 5px;
   margin-right: 17px;
 }
-.form-group:not(.file):not(.checkbox) .title-label.control-label,
+
+.form-group:not(.file, .checkbox) .title-label.control-label,
 .form-group.wrapper.checkbox .title-label.control-label {
   position: relative;
   padding: 0;
@@ -108,7 +130,8 @@ form#form-modal-upload .form-group.wrapper.checkbox .control-label {
   padding-top: 0;
   margin-bottom: 1rem;
 }
-.form-group:not(.file):not(.checkbox) .control-label:not(.title-label)::before,
+
+.form-group:not(.file, .checkbox) .control-label:not(.title-label)::before,
 .form-group.wrapper.checkbox .control-label:not(.title-label)::before {
   content: "";
   background-color: #f9f9f9;
@@ -119,39 +142,47 @@ form#form-modal-upload .form-group.wrapper.checkbox .control-label {
   height: 10px;
   z-index: -1;
 }
-/*.form-group.checkbox:not(.wrapper) .control-label {
+
+/* .form-group.checkbox:not(.wrapper) .control-label {
   position: absolute;
   left: 1.7rem;
   font-size: .9em;
   bottom: 3px;
-}*/
+} */
 .form-group.date .control-label {
   left: 65px !important;
 }
+
 .form-group.date .controls {
   display: flex;
 }
+
 .form-group.date .select-time {
   margin-left: 1.5rem;
 }
+
 .form-group.date .select-hour,
 .form-group.date .select-minutes {
   width: 80px !important;
 }
+
 .form-group.date .select-allday,
 .form-group.date .select-minutes {
   border-left: none !important;
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
+
 .form-group.date .bazar-date,
 .form-group.date .select-hour {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
 }
+
 .datepicker table tr td.active {
   background-color: var(--primary-color) !important;
 }
+
 .table-condensed > tbody > tr > td,
 .table-condensed > tbody > tr > th,
 .table-condensed > tfoot > tr > td,
@@ -160,6 +191,7 @@ form#form-modal-upload .form-group.wrapper.checkbox .control-label {
 .table-condensed > thead > tr > th {
   padding: 2px 8px;
 }
+
 .datepicker-dropdown {
   padding: 10px !important;
 }
@@ -170,21 +202,26 @@ form#form-modal-upload .form-group.wrapper.checkbox .control-label {
   left: 0.2rem !important;
   margin-left: 10px;
 }
+
 .form-group.wrapper .control-label {
   left: 0.75rem !important;
 }
+
 .form-group.input.file .control-label {
   margin-bottom: 5px;
 }
+
 .form-group.input.file {
   margin-top: -10px;
 }
+
 .form-group.input {
   margin-top: 1.8rem;
 }
+
 .form-control.wrapper {
   height: auto;
-  margin-left: 0px;
+  margin-left: 0;
   padding-left: 0;
   padding-bottom: 10px;
   margin-bottom: 1.5rem;
@@ -195,18 +232,22 @@ select.input-sm {
   font-size: 0.9em;
   padding: 1px 5px;
 }
+
 label .symbole_obligatoire {
   float: right;
 }
+
 .controls .btn-toolbar {
   margin-top: 0;
 }
+
 input.form-control[type="file"] {
   padding-left: 0;
   padding-top: 0.5em;
   cursor: pointer;
   position: relative;
 }
+
 input.form-control[type="file"]::before {
   content: "Choisir un fichier";
   position: absolute;
@@ -219,15 +260,19 @@ input.form-control[type="file"]::before {
   color: var(--neutral-light-color);
   line-height: 2.6rem;
 }
+
 .input-group {
   display: flex;
 }
+
 .input-group:not(.form-group) {
   display: flex !important;
 }
+
 .input-group.hide {
   display: none !important;
 }
+
 .input-group-addon {
   border-radius: 5px 0 0 5px;
   line-height: 46px;
@@ -240,40 +285,49 @@ input.form-control[type="file"]::before {
   display: flex;
   align-items: center;
 }
+
 a.input-group-addon:hover {
   color: var(--neutral-light-color);
   opacity: 0.9;
 }
+
 .form-control + .input-group-addon,
 input + .input-group-addon {
   border-radius: 0 5px 5px 0;
 }
+
 .input-group-addon + .form-control,
 .input-group-addon + input {
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
-.input-group .form-control:not(:first-child):not(:last-child),
-.input-group-addon:not(:first-child):not(:last-child),
-.input-group-btn:not(:first-child):not(:last-child) {
+
+.input-group .form-control:not(:first-child, :last-child),
+.input-group-addon:not(:first-child, :last-child),
+.input-group-btn:not(:first-child, :last-child) {
   border-radius: 0 !important;
 }
+
 .input-group-addon,
 .input-group-btn {
   width: auto;
 }
+
 .input-prepend input {
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
+
 .input-append input {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-right: none !important;
 }
+
 .input-group.input-prepend.input-append input {
   flex: 1;
 }
+
 .input-append .input-group-btn select {
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
@@ -282,24 +336,30 @@ input + .input-group-addon {
   line-height: 2.7rem;
   height: 2.7rem;
 }
+
 input[type="file"] ~ output {
   padding: 0;
 }
+
 input[type="file"] ~ output img {
   border-radius: 3px;
   height: 150px;
   margin-top: 10px;
 }
+
 form {
   position: relative;
 }
+
 form.form-horizontal {
   margin-bottom: 1.5rem;
 }
+
 form .col-sm-9 {
   width: 100%;
   margin: 0;
 }
+
 .symbole_obligatoire.col-sm-9.col-sm-offset-3 {
   position: absolute;
   bottom: 0.7em;
@@ -307,20 +367,20 @@ form .col-sm-9 {
   width: auto;
   font-size: 0.9em;
 }
+
 .bazar-checkbox-cols {
-  column-width: 250px;
-  -webkit-column-width: 250px;
-  -moz-column-width: 250px;
-  column-count: 50;
-  -webkit-column-count: 50;
-  -moz-column-count: 50;
+  columns: 250px 50;
+  columns: 250px 50;
+  columns: 250px 50;
 }
+
 .form-help {
   cursor: help;
   margin-left: 0.3rem;
   margin-right: 3px;
 }
-.form-group:not(.file):not(.checkbox) .control-label .form-help {
+
+.form-group:not(.file, .checkbox) .control-label .form-help {
   margin-left: 0.6rem;
 }
 
@@ -332,16 +392,19 @@ form .col-sm-9 {
   border: 2px solid var(--primary-color);
   border-left: none;
 }
+
 .input-group-btn:last-child > .btn {
   height: 45.9px;
 }
+
 /* MAP */
 #osmmapform {
   margin-top: 0 !important;
-  border-radius: 0 5px 5px 5px;
+  border-radius: 0 5px 5px;
   margin-bottom: 10px;
   z-index: 8;
 }
+
 .btn-geolocate-address {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
@@ -350,22 +413,25 @@ form .col-sm-9 {
 .leaflet-control-container .leaflet-bar.leaflet-control {
   background-color: var(--neutral-light-color);
 }
+
 .leaflet-control-container .leaflet-bar.leaflet-control a {
   color: var(--primary-color);
 }
 
 .leaflet-control-container
-  .leaflet-control-zoom-fullscreen.fullscreen-icon:before {
+  .leaflet-control-zoom-fullscreen.fullscreen-icon::before {
   color: var(--neutral-color);
 }
 
-@media (max-width: 800px) {
+@media (width <= 800px) {
   .textarea .btn-toolbar > .btn-group {
     display: none;
   }
+
   .form-group.wiki-textarea .control-label {
     top: 0.7rem;
   }
+
   input.form-control[type="file"]::before {
     padding: 1px 1rem 0 0.8rem;
   }
@@ -375,10 +441,12 @@ form .col-sm-9 {
   padding: 0;
   margin-top: 0;
 }
+
 .form-group.summernote .note-editor {
   margin-bottom: 0;
   border: none;
 }
+
 .form-group.summernote .note-editable {
   padding: 1em;
 }
@@ -387,9 +455,11 @@ form .col-sm-9 {
 .form-horizontal .checkbox.inline-container {
   padding-top: 0;
 }
+
 .inline-container > label {
   margin-right: 1rem;
 }
+
 .inline-container [type="radio"]:not(:checked) + span:not(.lever),
 .inline-container [type="radio"]:checked + span:not(.lever) {
   margin-right: -5px;
@@ -403,6 +473,7 @@ form .col-sm-9 {
 .form-group.wrapper .radio {
   padding-top: 5px;
 }
+
 /* handle textarea with aceditor */
 .controls .scroll-container-toolbar {
   overflow-x: scroll;
@@ -411,20 +482,24 @@ form .col-sm-9 {
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
+
 .controls .scroll-container-toolbar::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
+
 .controls .scroll-container-toolbar .aceditor-toolbar {
   width: 900px;
   padding-bottom: 8px;
 }
+
 .form-group.wiki-textarea .control-label {
   position: relative !important;
   top: 62px !important;
   left: 1.7rem !important;
   margin-top: -20px;
 }
+
 .aceditor-container .btn-toolbar .btn {
-  font-size: 16px; /* we use a fixed size for toolbar*/
+  font-size: 16px; /* we use a fixed size for toolbar */
 }
