--- a/styles/margot-base/components/tables.css
+++ b/styles/margot-base/components/tables.css
@@ -2,6 +2,7 @@
   line-height: 1.8rem;
   vertical-align: middle;
 }
+
 .table-condensed>tbody>tr>td:first-child strong,
 .table-condensed>tbody>tr>td:first-child h1,
 .table-condensed>tbody>tr>td:first-child h2,
@@ -13,13 +14,14 @@
   text-transform: capitalize;
   color: var(--primary-color);
 }
+
 #add-entry-table .btn-xs {
   padding: 4px 15px !important;
 }
 #add-entry-table .btn-xs i { margin-right: 8px; }
 #add-entry-table th:last-child { width: 245px !important; }
 
-@media screen and (max-width: 800px) {
+@media screen and (width <= 800px) {
   .table-responsive { border:none !important; }
 }
 
@@ -29,15 +31,17 @@
 
 /* Datatables */
 
-table.dataTable.table-condensed .sorting:after,
-table.dataTable.table-condensed .sorting_asc:after,
-table.dataTable.table-condensed .sorting_desc:after  {
+table.dataTable.table-condensed .sorting::after,
+table.dataTable.table-condensed .sorting_asc::after,
+table.dataTable.table-condensed .sorting_desc::after  {
   top: 8px !important;
   right: 4px !important;
 }
-table.dataTable .prevent-sorting:after {
+
+table.dataTable .prevent-sorting::after {
   display: none !important;
 }
+
 table.dataTable td>select {
   width: 200px !important;
 }
@@ -49,21 +53,25 @@ table.dataTable td>select {
   font-size: .9rem;
   margin-bottom: .3rem !important;
 }
+
 .dataTables_header > .col-sm-6:last-child {
   text-align: right;
 }
-.dataTables_header input[type=search] {
+
+.dataTables_header input[type="search"] {
   margin-left: 0 !important;
   font-size: .9rem;
   height: 2.3rem;
   padding: .5em;
 }
+
 .dataTables_header .input-group-addon {
   height: 2.3rem;
   line-height: 2.3rem;
   padding: 0 11px;
 }
-.dataTables_filter .search-icon:before {
+
+.dataTables_filter .search-icon::before {
   font-size: 1rem;
   vertical-align: middle;
 }
@@ -72,9 +80,10 @@ table.dataTable td>select {
   display: flex;
   align-items: center;
 }
+
 .dataTables_length label select {
   margin: 0 .5rem;
-  border: 1px solid #dddddd;
+  border: 1px solid #ddd;
 }
 
 /* footer */
@@ -86,26 +95,31 @@ table.dataTable td>select {
 .dataTables_footer.no-pagination .pagination {
   display:none;
 }
+
 .dataTables_footer.no-pagination .dataTables_info {
   padding-top: 0;
   padding-bottom: 1rem;
 }
+
 .pagination > li > a {
   position: relative;
   float: left;
   background-color: transparent;
-  border: 1px solid #dddddd !important;
+  border: 1px solid #ddd !important;
   color: var(--primary-color);
 }
+
 .pagination > li:not(:first-child) > a {
   border-left: none !important;
 }
+
 .pagination > li.active > a, .pagination > li.active:hover > a {
   background-color: var(--primary-color);
   color: var(--neutral-light-color);
 }
-.pagination > li:not(.disabled):not(.active):hover > a,
-.pagination > li:not(.disabled):not(.active) > a:focus {
+
+.pagination > li:not(.disabled, .active):hover > a,
+.pagination > li:not(.disabled, .active) > a:focus {
   background-color: #f0f0f0 !important;
   color: var(--primary-color) !important;
 }
