--- a/styles/margot-base/partials/footer.css
+++ b/styles/margot-base/partials/footer.css
@@ -1,6 +1,6 @@
 .footer {
   font-size: .8em;
-  margin: 2em 0 1em 0;
+  margin: 2em 0 1em;
   padding: 0;
   text-align: center;
   border-bottom: var(--footer-border);
@@ -15,6 +15,7 @@
   margin: 0;
   font-weight: 800;
 }
+
 .footer::after {
   content: "";
   background-color: var(--neutral-soft-color);
@@ -31,6 +32,7 @@
   color: var(--neutral-color);
   transition: color .2s;
 }
+
 .footer a i {
   color: var(--primary-color);
   font-size: 1.2em;
@@ -38,6 +40,7 @@
   opacity: .7;
   transition: opacity .2s;
 }
+
 .footer a:hover i {
   opacity: 1;
 }
@@ -50,17 +53,19 @@
   color: var(--footer-text-color);
   padding: 30px 0;
 }
+
 #yw-footer h1, #yw-footer h2, #yw-footer h3, #yw-footer h4, #yw-footer h5, #yw-footer h6 {
   color: var(--footer-title-color);
 }
 
-@media (max-width: 800px) {
+@media (width <= 800px) {
   .footer {
     display: flex;
     justify-content: space-around;
   }
   .footer a > span { display: none; }
   .footer a i { font-size: 1.1rem; }
+
   .footer::after {
     left: 0;
     right: 0;
