--- a/styles/margot-base/partials/general.css
+++ b/styles/margot-base/partials/general.css
@@ -4,7 +4,7 @@
 
 /* nunito-regular - latin */
 @font-face {
-  font-family: 'Nunito';
+  font-family: Nunito;
   font-style: normal;
   font-weight: 400;
   src: local('Nunito Regular'), local('Nunito-Regular'),
@@ -14,7 +14,7 @@
 
 /* nunito-600 - latin */
 @font-face {
-  font-family: 'Nunito';
+  font-family: Nunito;
   font-style: normal;
   font-weight: 600;
   src: local('Nunito SemiBold'), local('Nunito-SemiBold'),
@@ -24,7 +24,7 @@
 
 /* nunito-800 - latin */
 @font-face {
-  font-family: 'Nunito';
+  font-family: Nunito;
   font-style: normal;
   font-weight: 800;
   src: local('Nunito ExtraBold'), local('Nunito-ExtraBold'),
@@ -33,7 +33,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   src: url('../../../fonts/roboto-normal-400-.eot');
@@ -43,18 +43,20 @@
         url('../../../fonts/roboto-normal-400-.ttf') format('truetype');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
+
 /* latin */
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   src: local(''),
         url('../../../fonts/roboto-normal-400-latin.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 /* latin-ext */
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   font-style: normal;
   font-weight: 400;
   src: local(''),
@@ -63,7 +65,7 @@
 }
 
 @font-face {
-  font-family: 'Merriweather';
+  font-family: Merriweather;
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/merriweather-normal-400-.eot');
@@ -73,24 +75,27 @@
         url('../../../fonts/merriweather-normal-400-.ttf') format('truetype');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
+
 /* latin */
 @font-face {
-  font-family: 'Merriweather';
+  font-family: Merriweather;
   font-style: normal;
   font-weight: 400;
   src: local(''),
         url('../../../fonts/merriweather-normal-400-latin.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 /* latin-ext */
 @font-face {
-  font-family: 'Merriweather';
+  font-family: Merriweather;
   font-style: normal;
   font-weight: 400;
   src: local(''),
         url('../../../fonts/merriweather-normal-400-latin-ext.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /*
 * Main styles
 */
@@ -150,7 +155,7 @@ br+h1, br+h2 {
   margin-top: .2em;
 }
 
-@media (max-width: 1200px) {
+@media (width <= 1200px) {
   h1 {
     font-size: 2rem;
   }
@@ -184,6 +189,7 @@ a.yeswiki-editable .icon-edit {
   font-size: .8rem;
   margin-left: 2px;
 }
+
 .dropdown-menu {
   font-size: inherit;
 }
@@ -205,34 +211,35 @@ ul {
 }
 
 /* To prevent display trouble on small screen */
-@media (max-width: 800px) {
+@media (width <= 800px) {
   img, video, iframe {
     max-width: 100% !important;
   }
+
   .media > .media-left > img {
     max-width: initial !important;
   }
+
   .media {
     overflow: auto;
   }
 }
 
-/* Icon compatibility ; not fontawesome*/
-:not(.fa):not(.fa-trash).icon-trash::before {
+/* Icon compatibility ; not fontawesome */
+:not(.fa, .fa-trash).icon-trash::before {
   content: "\e020";
 }
 
-:not(.fa):not(.fa-eye-open).icon-eye-open::before {
-
+:not(.fa, .fa-eye-open).icon-eye-open::before {
   content: "\e105";
 
 }
 
-:not(.fa):not(.fa-tags).icon-tags::before {
+:not(.fa, .fa-tags).icon-tags::before {
   content: "\e042";
 }
 
-:not(.fa).icon-white, :not(.fa):not(.form-group).icon, :not(.fa).icon-pencil, :not(.fa).icon-tags, :not(.fa).icon-trash {
+:not(.fa).icon-white, :not(.fa, .form-group).icon, :not(.fa).icon-pencil, :not(.fa).icon-tags, :not(.fa).icon-trash {
   position: relative;
   top: 1px;
   display: inline-block;
