--- a/styles/margot-base/templates/search.css
+++ b/styles/margot-base/templates/search.css
@@ -7,7 +7,8 @@
   left: 0;
   padding: 0;
 }
-.bazar-search input[type=text] {
+
+.bazar-search input[type="text"] {
   margin-left: 2.7rem;
   border-radius: .9rem !important;
   background-color: #e8e8e8;
@@ -16,9 +17,11 @@
   height: 2.4rem;
   padding-left: 1.5rem;
 }
-.facette-container.dynamic .bazar-search input[type=text] {
+
+.facette-container.dynamic .bazar-search input[type="text"] {
   border-radius: 0 .5rem .5rem .9rem !important;
 }
+
 .bazar-search .search-filter select {
   height: 2.4rem;
   padding-top: .4em;
@@ -27,6 +30,7 @@
   color: var(--neutral-light-color);
   border-radius: 0 !important;
 }
+
 .bazar-search .search-button-container .btn {
   background-color: var(--primary-color) !important;
   color: var(--neutral-light-color);
@@ -36,26 +40,33 @@
   border-top-right-radius: .5em !important;
   border-bottom-right-radius: .5em !important;
 }
+
 .bazar-search .search-button-container .btn {
   background: none;
 }
-.search-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+
+.search-input::input-placeholder { /* WebKit, Blink, Edge */
   color: var(--neutral-color);
 }
-.search-input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+
+.search-input:placeholder { /* Mozilla Firefox 4 to 18 */
   color: var(--neutral-color);;
   opacity:  1;
 }
-.search-input::-moz-placeholder { /* Mozilla Firefox 19+ */
+
+.search-input::placeholder { /* Mozilla Firefox 19+ */
   color: var(--neutral-color);;
   opacity:  1;
 }
-.search-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+
+.search-input:input-placeholder { /* Internet Explorer 10-11 */
   color: var(--neutral-color);;
 }
-.search-input::-ms-input-placeholder { /* Microsoft Edge */
+
+.search-input::input-placeholder { /* Microsoft Edge */
   color: var(--neutral-color);;
 }
+
 .search-input::placeholder { /* Most modern browsers support this now. */
   color: var(--neutral-color);;
 }
@@ -63,6 +74,7 @@
 .BAZ_menu + #bazar-search-1 {
   margin-top: 30px;
 }
+
 #search-form{
   margin-bottom: 30px;
 }
